force-app/main/default/objects/Consult_Tattoo_Removal__c/Consult_Tattoo_Removal__c.object-meta.xml
<CustomObject>
    <label>Consult Tattoo Removal</label>
    <nameField>
        <label>Consult Tattoo Removal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consult Tattoo Removals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>