force-app/main/default/objects/Consult_Tattoo_Removal__c/fields/Tattoo_Removal_Age__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Age__c</fullName>
    <label>Tattoo Removal Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-3 years</fullName>
            </value>
            <value>
                <fullName>3-4 years</fullName>
            </value>
            <value>
                <fullName>4-5 years</fullName>
            </value>
            <value>
                <fullName>5+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>