force-app/main/default/objects/Consult_Tattoo_Removal__c/fields/Tattoo_Removal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Notes__c</fullName>
    <label>Tattoo Removal Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>