force-app/main/default/objects/Consult_Tattoo_Removal__c/fields/Tattoo_Removal_Skin_Type__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Skin_Type__c</fullName>
    <label>Tattoo Removal Skin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 point for skin type I - Always Burn, never tan.</fullName>
            </value>
            <value>
                <fullName>2 points for skin type II - Usuallt Bun, tan less than about average.</fullName>
            </value>
            <value>
                <fullName>3 points for skin type III - Sometimes burns, gradually tans about average.</fullName>
            </value>
            <value>
                <fullName>4 points for skin type IV - Sometimes burns, tans (light brown or olive skin).</fullName>
            </value>
            <value>
                <fullName>5 points for skin type V - Rarely burns, tans always.</fullName>
            </value>
            <value>
                <fullName>6 points for skin type VI - Deeply pigmented, never burns.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>